# high-performance-minimax-checkers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mi_programa  tests.cpp
board/: board.cpp  board.h  gameMaster.cpp  gameMaster.h
bots/minimax/: minimax.cpp  minimax.h
gameLogs/: gameExample.txt
